<resources>
    <string name="app_name">MadLevel4Task2v2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="all_time_statistics">Your all time statistics</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="v_s">VS</string>
    <string name="you_lose">Computer wins!</string>
    <string name="draw">Draw</string>
    <string name="you_win">You win!</string>
    <string name="statistics">Win: %d  Draw: %d  Lose: %d</string>
    <string name="history">Your Game History</string>
    <string name="delete_history">delete history</string>

    <string name="menu_history">History</string>
    <string name="menu_delete">Delete</string>
</resources>